complete simple stub with views and models

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "gulp-bb-stub",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "gulp-file-include": "~0.3.1"
+  },
   "devDependencies": {
     "connect": "^2.14.4",
     "connect-livereload": "^0.4.0",
