--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,10 @@
   "dependencies": {
     "jquery": "~1.11.0",
     "requirejs": "~2.1.14",
-    "backbone": "~1.1.2"
+    "backbone": "~1.1.2",
+    "requirejs-text": "~2.0.12",
+    "enquire": "~2.1.1",
+    "matchmedia": "~0.2.0"
   },
   "devDependencies": {}
 }
