--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "jshint-stylish": "^0.2.0",
     "opn": "^0.1.1",
     "wiredep": "^1.4.3",
-    "gulp-concat": "~2.2.0"
+    "gulp-concat": "~2.2.0",
+    "gulp-ejs": "~0.3.0"
   },
   "engines": {
     "node": ">=0.10.0"
